# minas

./: .github_release.sh  .travis.yml  LICENSE  README.md  circle.yml
ethercat_manager/: CHANGELOG.rst  CMakeLists.txt  package.xml
ethercat_manager/include/ethercat_manager/: ethercat_manager.h
ethercat_manager/src/: ethercat_manager.cpp
minas/: CHANGELOG.rst  CMakeLists.txt  package.xml
minas_control/: CHANGELOG.rst  CMakeLists.txt  package.xml
minas_control/config/: minas_controllers.yaml
minas_control/doc/: conf.py  index.rst
minas_control/include/minas_control/: minas_client.h  minas_hardware_interface.h
minas_control/launch/: minas_control.launch
minas_control/src/: main.cpp  minas_client.cpp  minas_hardware_interface.cpp  simple_test.cpp
tra1_bringup/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
tra1_bringup/config/: tra1_controllers.yaml
tra1_bringup/launch/: tra1_bringup.launch  tra1_moveit.launch
tra1_bringup/test/: test-tra1_bringup.test  test-tra1_moveit.test
tra1_description/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
tra1_description/launch/: tra1.launch  tra1_description.rviz
tra1_description/meshes/: B.STL  J1.STL  J2.STL  J3.STL  J4.STL  J5.STL  J6.STL  LICENSE
tra1_description/urdf/: materials.xacro  tra1.xacro
tra1_moveit_config/: .setup_assistant  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
tra1_moveit_config/config/: joint_limits.yaml  ompl_planning.yaml  tra1.srdf  tra1_controllers.yaml
tra1_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  tra1_moveit_controller_manager.launch.xml  trajectory_execution.launch.xml  warehouse.launch
