<?xml version="1.0"?>
<package>
  <name>ethercat_manager</name>
  <version>1.0.1</version>
  <description>
The ethercat_manager package,

      ROS-Industrial support stack for facilitating communication with EtherCAT networks.

copied from https://github.com/ros-industrial/robotiq/blob/jade-devel/robotiq_ethercat/src/ethercat_manager.cpp
  </description>

  <maintainer email="534o@opensource-robotics.tokyo.jp">Tokyo Opensource Robotics Developer 534</maintainer>
  <author email="jonathan.meyer@swri.org">Jonathan Meyer</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>soem</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>soem</run_depend>

  <export>
  </export>
</package>
