<?xml version="1.0"?>
<package>
  <name>minas_control</name>
  <version>0.5.2</version>
  <description>The minas_control package</description>

  <maintainer email="534o@opensource-robotics.tokyo.jp">Tokyo Opensource Robotics Developer 534</maintainer>

  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>ethercat_manager</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>transmission_interface</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>joint_limits_interface</build_depend>
  <build_depend>trajectory_msgs</build_depend>

  <run_depend>ethercat_manager</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>transmission_interface</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>joint_limits_interface</run_depend>
  <run_depend>trajectory_msgs</run_depend>

  <export>
  </export>
</package>
