<?xml version="1.0"?>
<package>
  <name>tra1_bringup</name>
  <version>1.0.9</version>
  <description>Package contains bringup scripts/config/tools for tra1 robto</description>

  <author email="534o@opensource-robotics.tokyo.jp">Tokyo Opensource Robotics Developer 534</author>
  <maintainer email="dev@opensource-robotics.tokyo.jp">Tokyo Opensource Robotics Kyokai (TORK) Developer Team</maintainer>

  <license>GPLv2</license>

  <url type="website">http://ros.org/wiki/tra1_bringup</url>
  <url type="repository">https://github.com/tork-a/minas</url>
  <url type="bugtracker">https://github.com/tork-a/minas/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>controller_manager</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>joint_trajectory_controller</run_depend>
  <run_depend>minas_control</run_depend>
  <run_depend>position_controllers</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tra1_description</run_depend>
  <run_depend>tra1_moveit_config</run_depend>

  <test_depend>roslaunch</test_depend>
  <test_depend>rostest</test_depend>

  <export>
  </export>
</package>
