<?xml version="1.0"?>
<package>
  <name>tra1_description</name>
  <version>1.0.9</version>
  <description>This package contains the description (mechanical, kinematic, visual,  etc.) of the TRA1 robot. The files in this package are parsed and used by a variety of other components.  Most users will not interact directly with this package.</description>

  <author email="ryosuke.tajima@opensource-robotics.tokyo.jp">Ryosuke Tajima</author>
  <maintainer email="dev@opensource-robotics.tokyo.jp">Tokyo Opensource Robotics Kyokai (TORK) Developer Team</maintainer>

  <license>GPLv2</license>
  <license>CC-BY-SA</license>

  <url type="website">http://ros.org/wiki/tra1_description</url>
  <url type="repository">https://github.com/tork-a/minas</url>
  <url type="bugtracker">https://github.com/tork-a/minas/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>xacro</build_depend>

  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>xacro</run_depend>

  <test_depend>roslaunch</test_depend>
  <test_depend>rostest</test_depend>

  <export>
  </export>
</package>
